[gd_scene load_steps=24 format=3 uid="uid://ct1pleqq81l3g"]

[ext_resource type="Script" path="res://entities/player/player.gd" id="1_unixv"]
[ext_resource type="Texture2D" uid="uid://7u7rndviyhil" path="res://assets/char_a_p1_0bas_humn_v01.png" id="2_feftq"]
[ext_resource type="Texture2D" uid="uid://rnglwrgori7e" path="res://assets/cone-light.jpg" id="3_5sp7r"]
[ext_resource type="Script" path="res://components/top_down_holder.gd" id="3_bfhb7"]
[ext_resource type="Script" path="res://components/top_down_input/top_down_input.gd" id="4_6dr58"]
[ext_resource type="Script" path="res://components/top_down_movement.gd" id="5_t0m2w"]
[ext_resource type="PackedScene" uid="uid://ddijfxjrhmvlf" path="res://components/skills/cleave/cleave.tscn" id="6_ugq62"]
[ext_resource type="Script" path="res://components/top_down_input/top_down_input_properties.gd" id="6_xbeno"]
[ext_resource type="Script" path="res://components/health.gd" id="9_4f0ke"]

[sub_resource type="Resource" id="Resource_fvknp"]
script = ExtResource("6_xbeno")
speed = 150.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kewgs"]
size = Vector2(16, 8)

[sub_resource type="Animation" id="Animation_55k60"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(1, 4)]
}

[sub_resource type="Animation" id="Animation_5bicj"]
resource_name = "walkDown"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 4), Vector2i(1, 4), Vector2i(2, 4), Vector2i(3, 4), Vector2i(4, 4), Vector2i(5, 4)]
}

[sub_resource type="Animation" id="Animation_rysk1"]
resource_name = "walkLeft"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 7), Vector2i(1, 7), Vector2i(2, 7), Vector2i(3, 7), Vector2i(4, 7), Vector2i(5, 7)]
}

[sub_resource type="Animation" id="Animation_6oosh"]
resource_name = "walkRight"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 6), Vector2i(1, 6), Vector2i(2, 6), Vector2i(3, 6), Vector2i(4, 6), Vector2i(5, 6)]
}

[sub_resource type="Animation" id="Animation_4mpbc"]
resource_name = "walkUp"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 5), Vector2i(1, 5), Vector2i(2, 5), Vector2i(3, 5), Vector2i(4, 5), Vector2i(5, 5)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gs60t"]
_data = {
"RESET": SubResource("Animation_55k60"),
"walkDown": SubResource("Animation_5bicj"),
"walkLeft": SubResource("Animation_rysk1"),
"walkRight": SubResource("Animation_6oosh"),
"walkUp": SubResource("Animation_4mpbc")
}

[sub_resource type="Gradient" id="Gradient_bxfoe"]
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_fayur"]
gradient = SubResource("Gradient_bxfoe")
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(1, 0.5)

[sub_resource type="CircleShape2D" id="CircleShape2D_crcbn"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_85gw8"]
radius = 2.5
height = 32.0

[sub_resource type="Resource" id="Resource_xjqmc"]
script = ExtResource("6_xbeno")
speed = 150.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_aettp"]

[node name="Player" type="CharacterBody2D" node_paths=PackedStringArray("swordAttack", "lanternAttack", "health", "attackLight", "wanderingLight", "wanderingLantern") groups=["player"]]
z_index = 1
position = Vector2(72, 104)
scale = Vector2(0.75, 0.75)
script = ExtResource("1_unixv")
topDownInputProperties = SubResource("Resource_fvknp")
swordAttack = NodePath("WeaponHolder/Cleave")
lanternAttack = NodePath("LanternAttackHolder/Cleave")
health = NodePath("Health")
attackLight = NodePath("LanternAttackHolder/Cleave/PointLight2D")
wanderingLight = NodePath("LanternWanderingHolder/PointLight2D")
wanderingLantern = NodePath("LanternWanderingHolder")
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(1.26667, 1)
shape = SubResource("RectangleShape2D_kewgs")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(3, 3)
position_smoothing_enabled = true

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(0, -10.6667)
texture = ExtResource("2_feftq")
hframes = 8
vframes = 8
frame = 33

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_gs60t")
}

[node name="LanternAttackHolder" type="Node2D" parent="." node_paths=PackedStringArray("actor")]
position = Vector2(0, -10.6667)
script = ExtResource("3_bfhb7")
actor = NodePath("..")

[node name="TorchLight" type="Node2D" parent="LanternAttackHolder"]
visible = false

[node name="PointLight2D" type="PointLight2D" parent="LanternAttackHolder/TorchLight"]
position = Vector2(10.6667, 6.10352e-05)
rotation = -1.5708
color = Color(0.996078, 0.592157, 0.129412, 1)
energy = 0.8
shadow_enabled = true
texture = ExtResource("3_5sp7r")
offset = Vector2(0, 85)
texture_scale = 0.5

[node name="PointLight2DBack" type="PointLight2D" parent="LanternAttackHolder/TorchLight"]
position = Vector2(10.6667, 4.57764e-05)
rotation = 1.57079
color = Color(0.996078, 0.592157, 0.129412, 1)
energy = 0.8
shadow_enabled = true
texture = ExtResource("3_5sp7r")
offset = Vector2(-1, 0)
texture_scale = 0.05

[node name="Cleave" parent="LanternAttackHolder" node_paths=PackedStringArray("collisionShape2D", "emitter") instance=ExtResource("6_ugq62")]
speed = 20.0
angle = 67.5
preparation_time = 0.1
recovery_time = 2.0
collisionShape2D = NodePath("CollisionShape2D")
emitter = NodePath("../..")
type = 1

[node name="PointLight2D" type="PointLight2D" parent="LanternAttackHolder/Cleave"]
position = Vector2(16, 3.05176e-05)
texture = SubResource("GradientTexture2D_fayur")
texture_scale = 1.5

[node name="CollisionShape2D" type="CollisionShape2D" parent="LanternAttackHolder/Cleave"]
position = Vector2(16, 3.05176e-05)
scale = Vector2(2.5, 2.5)
shape = SubResource("CircleShape2D_crcbn")

[node name="LanternWanderingHolder" type="Node2D" parent="." node_paths=PackedStringArray("actor")]
position = Vector2(0, -10.6667)
script = ExtResource("3_bfhb7")
actor = NodePath("..")

[node name="PointLight2D" type="PointLight2D" parent="LanternWanderingHolder"]
position = Vector2(16, 0)
texture = SubResource("GradientTexture2D_fayur")
texture_scale = 1.5

[node name="NavigationObstacle2D" type="NavigationObstacle2D" parent="LanternWanderingHolder"]
position = Vector2(21.3333, 3.05176e-05)
radius = 20.0
avoidance_layers = 4

[node name="WeaponHolder" type="Node2D" parent="." node_paths=PackedStringArray("actor")]
position = Vector2(0, -10.6667)
script = ExtResource("3_bfhb7")
actor = NodePath("..")

[node name="Cleave" parent="WeaponHolder" node_paths=PackedStringArray("collisionShape2D", "emitter") instance=ExtResource("6_ugq62")]
rotation = -1.1781
speed = 20.0
angle = 67.5
preparation_time = 0.1
recovery_time = 0.25
collisionShape2D = NodePath("CollisionShape2D")
emitter = NodePath("../..")
range = 24.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="WeaponHolder/Cleave"]
position = Vector2(10.6667, 3.05176e-05)
rotation = -1.5708
shape = SubResource("CapsuleShape2D_85gw8")

[node name="TopDownInput" type="Node" parent="." node_paths=PackedStringArray("actor")]
script = ExtResource("4_6dr58")
actor = NodePath("..")
properties = SubResource("Resource_xjqmc")

[node name="TopDownMovement" type="Node" parent="." node_paths=PackedStringArray("animationPlayer", "actor")]
script = ExtResource("5_t0m2w")
animationPlayer = NodePath("../AnimationPlayer")
actor = NodePath("..")

[node name="Health" type="Area2D" parent="." node_paths=PackedStringArray("actor")]
collision_layer = 0
collision_mask = 0
script = ExtResource("9_4f0ke")
actor = NodePath("..")
sensible_types = Array[int]([0])

[node name="CollisionShape2D" type="CollisionShape2D" parent="Health"]
position = Vector2(-0.683, -13.333)
scale = Vector2(0.9, 1.1)
shape = SubResource("CapsuleShape2D_aettp")

[connection signal="skillactived" from="LanternAttackHolder/Cleave" to="." method="_on_lantern_skillactivated"]
[connection signal="health_changed" from="Health" to="." method="_on_health_changed"]
